[project]
name = "wiki-mcp"
version = "0.1.0"
description = "Confluence MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
wiki-mcp = "wiki_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_mcp"]
